<resources>
    <item name="username" type="id"/>
    <item name="token" type="id"/>
    <item name="idea" type="id"/>
    <item name="save_auth" type="id"/>
    <item name="test_auth" type="id"/>
    <item name="generate" type="id"/>
    <item name="refresh" type="id"/>
    <item name="stop" type="id"/>
    <item name="retry" type="id"/>
    <item name="download" type="id"/>
    <item name="play_pause" type="id"/>
    <item name="video_player" type="id"/>
    <item name="prev_project" type="id"/>
    <item name="next_project" type="id"/>
    <item name="status_text" type="id"/>
    <item name="project_text" type="id"/>
    <item name="open_live_e2e" type="id"/>
    <item name="e2e_connect_kaggle" type="id"/>
    <item name="e2e_enable_kaggle_internet" type="id"/>
    <item name="e2e_import_token_file" type="id"/>
    <item name="e2e_import_clipboard" type="id"/>
    <item name="e2e_username" type="id"/>
    <item name="e2e_token" type="id"/>
    <item name="e2e_start" type="id"/>
    <item name="e2e_open_main" type="id"/>
    <item name="e2e_status" type="id"/>
    <item name="e2e_details" type="id"/>
</resources>
